# decision-intelligence-assistant

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  migrate_to_qdrant_server.py  pyproject.toml
backend/app/: main.py
backend/app/routers/: generation.py  prediction.py
backend/app/schemas/: models.py
backend/app/services/: embedder.py  llm_client.py  ml_model.py  vector_store.py
backend/app/utils/: features.py  logger.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AnswerMode.jsx  CompareMode.jsx  PriorityMode.jsx  QueryBox.jsx
frontend/src/services/: api.js
notebook/: Decision_Intelligence_Assistant_part1.ipynb  Decision_Intelligence_Assistant_part2 .ipynb  Decision_Intelligence_Assistant_part3.ipynb  Decision_Intelligence_Assistant_part4.ipynb  Decision_Intelligence_Assistant_part5.ipynb
