[project]
name = "decision-intelligence-backend"
version = "0.1.0"
description = "Decision Intelligence Assistant — FastAPI Backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=2.7.0",
    "openai>=1.30.0",
    "scikit-learn>=1.4.0",
    "vaderSentiment>=3.3.2",
    "textstat>=0.7.3",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "torch>=2.3.0",
    "imbalanced-learn>=0.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
